改进的汇率转换器（新增了菜单项；将之前写的不同汇率转换的三个函数写到了一个函数中；新增了config按钮，点击后可跳转至新页面即汇率配置界面，并将当前汇率作为参数传递过去；可在汇率配置界面对不同汇率进行设置，点击save按钮后，返回第一个界面即汇率转换界面，并将修改后的新汇率作为参数传回去）

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,10 @@
 <resources>
     <string name="app_name">CurrencyExchangeRateConverter</string>
-    <string name="textView6">Hello</string>
+    <string name="textView6">Currency Converter</string>
     <string name="buttona">DOLLAR</string>
     <string name="buttonb">EURO</string>
     <string name="buttonc">WON</string>
+    <string name="btn_config">CONFIG</string>
+    <string name="btn_save_config">SAVE</string>
+    <string name="menu1">Setting</string>
 </resources>
