改进的对两队进行的计分器（使用ConstraintLayout中包含一个LinearLayout（horizontal）和RESET按钮，该LinearLayout（horizontal）中又包含两个LinearLayout（vertical）的方式，使得布局更加合理）

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,12 @@
 <resources>
-    <string name="app_name">Hello</string>
-    <string name="textView5">TeamA</string>
-    <string name="buttona">+1 POINT</string>
-    <string name="buttonb">+2 POINTS</string>
-    <string name="buttonc">+3 POINTS</string>
-    <string name="buttond">RESET</string>
+    <string name="app_name">CourtCounter</string>
+    <string name="textview1">TeamA</string>
+    <string name="textview3">TeamB</string>
+    <string name="button1">+3 POINTS</string>
+    <string name="button2">+2 POINTS</string>
+    <string name="button3">FREE THROW</string>
+    <string name="button6">FREE THROW</string>
+    <string name="button4">+3 POINTS</string>
+    <string name="button5">+2 POINTS</string>
+    <string name="button7">RESET</string>
 </resources>
