改进的汇率转换器(使用SharedPreferences保存汇率数据，在第二个页面中开启多线程，在子线程中获取网络数据（需在manifests/AndroidManifest.xml中开启网络访问权限），并和主线程通信)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,10 @@
 <resources>
-    <string name="app_name">CourtCounter</string>
+    <string name="app_name">CurrencyExchangeRateConverter</string>
+    <string name="textView6">Currency Converter</string>
+    <string name="buttona">DOLLAR</string>
+    <string name="buttonb">EURO</string>
+    <string name="buttonc">WON</string>
+    <string name="btn_config">CONFIG</string>
+    <string name="btn_save_config">SAVE</string>
     <string name="menu1">Setting</string>
-    <string name="textview1">TeamA</string>
-    <string name="textview3">TeamB</string>
-    <string name="button1">+3 POINTS</string>
-    <string name="button2">+2 POINTS</string>
-    <string name="button3">FREE THROW</string>
-    <string name="button6">FREE THROW</string>
-    <string name="button4">+3 POINTS</string>
-    <string name="button5">+2 POINTS</string>
-    <string name="button7">RESET</string>
 </resources>
