在MainActivity2.java中使用SharedPreferences保存上一次更新日期，使得应用每天更新一次汇率数据，而不是每次打开该页面都会更新数据。MainActivity2_1.java中使用列表显示数据（ArrayAdapter<String>），对应的布局文件是activity_main_activity2_1.xml；list_item.xml是关于列表的行布局文件；MainActivity3.java中使用自定义列表显示数据（SimpleAdapter）（其他页面的功能还未完善）

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="btn_config">CONFIG</string>
     <string name="btn_save_config">SAVE</string>
     <string name="menu1">Setting</string>
+    <string name="btn_rate_list">Rate List</string>
+    <string name="retur">Return</string>
 </resources>
